rendered view + border #34041

Closed
opened 2013-01-30 00:11:07 +01:00 by Cezary Kopias · 13 comments

%%%--- Operating System, Graphics card ---
Win7_x64 Indel HD4000

- Blender version with error, and version that worked ---

Win7_x64 r54188 from buildbot

- Short description of error ---

my startup blend: just switch 3dview to rendered hit the wheel and rotate view in one direction for a while.

  • rendered view freeze

  • draw a new render border - it is transparent

    • Steps for others to reproduce the error (preferably based on attached .blend file) ---

if blend file is not enough i can wrote steps to reproduce this bug starting from factory settings%%%

%%%--- Operating System, Graphics card --- Win7_x64 Indel HD4000 - Blender version with error, and version that worked --- Win7_x64 r54188 from buildbot - Short description of error --- my startup blend: just switch 3dview to rendered hit the wheel and rotate view in one direction for a while. - rendered view freeze - draw a new render border - it is transparent - Steps for others to reproduce the error (preferably based on attached .blend file) --- if blend file is not enough i can wrote steps to reproduce this bug starting from factory settings%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%In factory settings there's no rendered view border possible. You have to switch to cycles render.
Further you should check on the official release too, to rule out the issue is in your system, and not in blender.

Here it works all OK (OSX 10.7, imac)%%%

%%%In factory settings there's no rendered view border possible. You have to switch to cycles render. Further you should check on the official release too, to rule out the issue is in your system, and not in blender. Here it works all OK (OSX 10.7, imac)%%%
Author

%%%http://youtu.be/ABObJX3Ar-A

i can confirm it in recent trunk and official 2.65a win7 x64%%%

%%%http://youtu.be/ABObJX3Ar-A i can confirm it in recent trunk and official 2.65a win7 x64%%%
Member

%%%Doesn't seem to happen in linux with factory defaults%%%

%%%Doesn't seem to happen in linux with factory defaults%%%
Author

%%%it seams it has something to do when you start rotating 3d view and stop (release mouse) outside it ( like in properties view )

i ask on #blendercoders to verify and it can occur in linux also ... so maybe its a graphics card related %%%

%%%it seams it has something to do when you start rotating 3d view and stop (release mouse) outside it ( like in properties view ) i ask on #blendercoders to verify and it can occur in linux also ... so maybe its a graphics card related %%%

%%%I couldn't redo this yet. It looks a bit like there are some threads hanging but I'm not sure, this would mean that you can't quite Blender after this problem happens.

If anyone on linux can redo this under gdb, the output of ctrl+c in the terminal to break, and then "thread apply all bt" would be interesting to look at. %%%

%%%I couldn't redo this yet. It looks a bit like there are some threads hanging but I'm not sure, this would mean that you can't quite Blender after this problem happens. If anyone on linux can redo this under gdb, the output of ctrl+c in the terminal to break, and then "thread apply all bt" would be interesting to look at. %%%
Member

%%%This problem is tricky. I can reproduce it in Ubuntu 64-bit only with release builds from buildbot. It usually takes about 1 minute of random mouse moving (or ~1-2 hours of real work with blender). I can't reproduce it within gdb (I guess because of different performance), but of course I was able to attach gdb to already broken process. That is how I got the backtrace. Unfortunately, no debug info in buildbot builds.%%%

%%%This problem is tricky. I can reproduce it in Ubuntu 64-bit only with release builds from buildbot. It usually takes about 1 minute of random mouse moving (or ~1-2 hours of real work with blender). I can't reproduce it within gdb (I guess because of different performance), but of course I was able to attach gdb to already broken process. That is how I got the backtrace. Unfortunately, no debug info in buildbot builds.%%%
Member

%%%Got somewhat better backtrace with RelWithDebInfo. Attached in cycles_freeze_backtrace_reldebug.txt%%%

%%%Got somewhat better backtrace with RelWithDebInfo. Attached in cycles_freeze_backtrace_reldebug.txt%%%
Member

%%%cycles_freeze_backtrace_reldebug.txt is useless, because all 4 threads are the same as in normal blender state. Well, so much for "thread apply all bt".%%%

%%%cycles_freeze_backtrace_reldebug.txt is useless, because all 4 threads are the same as in normal blender state. Well, so much for "thread apply all bt".%%%

%%%Does it happen with border render only or also could be reproduced with smaller 3d viewport? My guess it's not strictly elated on borde ritself, but in timing used to sample frame.%%%

%%%Does it happen with border render only or also could be reproduced with smaller 3d viewport? My guess it's not strictly elated on borde ritself, but in timing used to sample frame.%%%

%%%As soon as i've posted the comment i've managed to reproduce the issue here. Looking :)%%%

%%%As soon as i've posted the comment i've managed to reproduce the issue here. Looking :)%%%

%%%Fixed in svn rev54326. Thanks for the report, closing.%%%

%%%Fixed in svn rev54326. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34041
No description provided.